ΜΑΘΗΜΑΤΑ/ΗΥ-340/PROJECTS/Compiler_Exec/examples/phase_2/Errors/Error2.asc
// 

function G(){
       function F(){
                       return G();  
       }
}
return G();	//Use of 'return' while not in a function
break;		//Use of 'break' while not in a loop
continue;	//Use of 'continue' while not in a loop
// Break / Continue / Return in scope != 0
{
	{
		{
			return G();
			break;
			continue;
		}
	}
}
